# Tesseract-Server

./: .gitignore  Cargo.toml  Dockerfile  README.Docker.md  README.md  compose.yaml
builds/cargo-tess/src/: main.rs
src/: main.rs
