[package]
name = "Tesseract-Server"
version = "0.1.0"
edition = "2021"

[dependencies]
local-ip-address = "0.6.3"
bincode = "1.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
num_cpus = "1.14"
petgraph = "0.7.1"
cargo_metadata = "0.12.1"
tracing = "0.1.27"
futures = "0.3.17"
walkdir = "2.3.2"
tracing-subscriber = "0.2.16"
toml = "0.5.8"