[package]
name = "Tesseract-Server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
cargo_metadata = "0.15"
petgraph = "0.6"
tar = "0.4"
flate2 = "1.0"
tempfile = "3.3"
clap = { version = "4.3", features = ["derive"] }
local-ip-address = "0.5"
num_cpus = "1.0"
walkdir = "2.3"
regex = "1.9"
futures = "0.3"
